make the layout

--- a/html.html
+++ b/html.html
@@ -10,18 +10,42 @@
 <body>
     <div class="continer">
 
-        <div class="score"></div>
+        <div class="score">/5</div>
 
 
-        <div class="qustion"></div>
-
-
-
-        <div class="multipul"></div>
+        <div class="Question"><p id="QA">HERE WILL BE THE QUESTION  </p></div>
 
 
 
-        <div class="next"></div>
+        <div class="multipul">
+            <div class="multi1">
+                <input type="radio" id="multi1" name="a" value="first" >
+                <p id="aaaaa">FIRST OPTION </p>
+
+            </div>
+
+            <div class="multi2">
+                <input type="radio" id="multi2" name="a" value="second" >
+                <p id="bbbbb">SECOND OPTION </p>
+            </div>
+
+            <div class="multi3">
+                <input type="radio" id="multi3" name="a" value="third" >
+                <p id="cccccc">THIRD OPTION </p>
+            </div>
+            <div class="multi4">
+                <input type="radio" id="multi4" name="a" value="forth" >
+                <p id="dddddd"> FORTH  </p>
+            </div>
+
+        </div>
+
+
+
+        <div class="next">
+            <button onclick="nextQA()">Start</button>
+
+        </div>
 
 
 
