--- a/html.html
+++ b/html.html
@@ -54,7 +54,7 @@
     -->
     <div class="continer">
 
-        <div class="score"></div>
+        <div class="score" id="result"></div>
 
     <div class="all">
         <div class="Question"><p id="QA">HERE WILL BE THE QUESTION  </p></div>
@@ -87,7 +87,10 @@
 
 
         <div class="next">
-            <button onclick="nextQA()">Start</button>
+            <button id="button1" onclick="nextQA()">Start</button>
+            <button id="button1" onclick="chick()">answer</button>
+
+            
 
         </div>
     </div>
