create timer and some css design

--- a/html.html
+++ b/html.html
@@ -8,51 +8,10 @@
     <link rel="stylesheet" type="text/css" href="./css.css" />
 </head>
 <body>
-    <!--
+    
     <div class="continer">
-
-        <div class="score"></div>
-
-
-        <div class="Question"><p id="QA">HERE WILL BE THE QUESTION  </p></div>
-
-
-
-        <div class="multipul">
-            <div class="multi1">
-                <input type="radio" id="multi1" name="a" value="first" >
-                <p id="aaaaa">FIRST OPTION </p>
-
-            </div>
-
-            <div class="multi2">
-                <input type="radio" id="multi2" name="a" value="second" >
-                <p id="bbbbb">SECOND OPTION </p>
-            </div>
-
-            <div class="multi3">
-                <input type="radio" id="multi3" name="a" value="third" >
-                <p id="cccccc">THIRD OPTION </p>
-            </div>
-            <div class="multi4">
-                <input type="radio" id="multi4" name="a" value="forth" >
-                <p id="dddddd"> FORTH  </p>
-            </div>
-
-        </div>
-
-
-
-        <div class="next">
-            <button onclick="nextQA()">Start</button>
-
-        </div>
-
-
-    </div>
-
-    -->
-    <div class="continer">
+        <div id="timer">YOU HAVE ONLY 1 min (60 sec) <br> TO SOLVE THIS QUIZ<br>
+            COUNT WILL START AFTER CLICK ON START </div>
 
         <div class="score" id="result"></div>
 
@@ -62,22 +21,22 @@
 
 
         <div class="multipul">
-            <div class="multi1">
+            <div class="multi1" id="first1muil">
                 <input type="radio" id="multi1" name="a" value="first" >
                 <p id="aaaaa">FIRST OPTION </p>
 
             </div>
 
-            <div class="multi2">
+            <div class="multi2" id="first2muil">
                 <input type="radio" id="multi2" name="a" value="second" >
                 <p id="bbbbb">SECOND OPTION </p>
             </div>
 
-            <div class="multi3">
+            <div class="multi3" id="first3muil">
                 <input type="radio" id="multi3" name="a" value="third" >
                 <p id="cccccc">THIRD OPTION </p>
             </div>
-            <div class="multi4">
+            <div class="multi4" id="first4muil">
                 <input type="radio" id="multi4" name="a" value="forth" >
                 <p id="dddddd"> FORTH  </p>
             </div>
