create two quizs and create home link

--- a/Main-page.html
+++ b/Main-page.html
@@ -26,8 +26,8 @@
             <div class="quizlist">
                 <ul>
                     <li><a href="./html.html">Science Quiz</a></li>
-                    <li><a href="./html.html">science Quiz</a></li>
-                    <li><a href="./html.html">science Quiz</a></li>
+                    <li><a href="./sport.html">Sport Quiz</a></li>
+                    <li><a href="./history.html">History Quiz</a></li>
                 </ul>
             </div>
     
