--- a/html.html
+++ b/html.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -52,7 +54,10 @@
             
 
         </div>
+        
     </div>
+
+    <div id=><a id="home" href="./Main-page.html">HOME</a></div>
 
 
     </div>
