some css design and full function

--- a/sport.html
+++ b/sport.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project-1</title>
+    <title>Sport Quiz</title>
     <link rel="stylesheet" type="text/css" href="./css.css" />
 </head>
 <body>
     
     <div class="continer">
-        <div id="timer">YOU HAVE ONLY 1 min (60 sec) <br> TO SOLVE THIS QUIZ<br>
+        <div id="timer">YOU HAVE ONLY 1 MIN (60 sec) <br> TO SOLVE THIS QUIZ<br>
             COUNT WILL START AFTER CLICK ON START </div>
 
         <div class="score" id="result"></div>
 
     <div class="all">
-        <div class="Question"><p id="QA">HERE WILL BE THE QUESTION  </p></div>
+        <div class="Question"><p id="QA">When You Ready click On Start <br> Good Luck  </p></div>
 
 
-
+        <div id="showMulti">
         <div class="multipul">
             <div class="multi1" id="first1muil">
                 <input type="radio" id="multi1" name="a" value="first" >
@@ -43,12 +43,13 @@
             </div>
 
         </div>
+        </div> 
 
 
 
         <div class="next">
             <button id="button1" onclick="nextQA()">Start</button>
-            <button id="button2" onclick="chick()">answer</button>
+            <button id="button2" onclick="chick()">Answer</button>
 
             
 
