ready to submit

--- a/Main-page.html
+++ b/Main-page.html
@@ -13,9 +13,9 @@
         <div class="navbar">
             <img src="./logo.jpg" class="logo"/>
             <ul>
-                <li><a href="#">home</a> </li>
-                <li><a href="#">about us</a> </li>
-                <li><a href="#">contact</a> </li>
+                <li><a class="navConntain" href="#">home</a> </li>
+                <li><a class="navConntain" href="#">about us</a> </li>
+                <li><a class="navConntain" href="#">contact</a> </li>
                 
             </ul>
         </div>
